# solana-program-demos

./: README.md
anchor-realloc-account-space/: Anchor.toml  package.json
anchor-realloc-account-space/programs/realloc-demo/: Cargo.toml
anchor-realloc-account-space/programs/realloc-demo/src/: lib.rs
anchor-realloc-account-space/tests/: realloc-demo.ts
drift-cpi-demo/: Anchor.toml  Cargo.toml  package.json
drift-cpi-demo/programs/drift_cpi_demo/: Cargo.toml
drift-cpi-demo/programs/drift_cpi_demo/src/: lib.rs
drift-cpi-demo/tests/: drift_client_test.ts  drift_cpi_demo.ts
marinade-staking-demo/: Anchor.toml  Cargo.toml  package.json
marinade-staking-demo/programs/marinade-staking-demo/: Cargo.toml
marinade-staking-demo/programs/marinade-staking-demo/src/: lib.rs
marinade-staking-demo/tests/: marinade-staking-demo.ts
pyth-demo/: Anchor.toml  package.json  tsconfig.json
pyth-demo/programs/pyth-demo/: Cargo.toml
pyth-demo/programs/pyth-demo/src/: lib.rs
pyth-demo/tests/: pyth-demo.ts
