[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-gen = "0.3.1"
anchor-spl = { version = "0.30.1" }
drift = { path = "./deps/drift" }
