[workspace]
members = ["programs/*"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
anchor-gen = "0.3.0"
solana-program = "1.18.9"
marinade = { path = "./deps/marinade" }
